--- a/javapage.html
+++ b/javapage.html
@@ -6,25 +6,28 @@
     <title>JAVA</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- <script src="contentJAVA.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/coding.png" type="image/x-icon">
     <link rel="stylesheet" href="java.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     <div class="header">
         <nav>
             <div class="nav_image">
                 <a href="index.html"><img src="images/logo1.png" alt="wait"></a>
-                <h3>LOGO</h3>
+                <h3>CodeIgniter</h3>
             </div>
             <div class="nav-links">
                 <!-- <i class="ri-close-circle-fill"></i> -->
                 <ul>
                     <li><a href=""><i class="ra ri-close-circle-fill"></i></a></li>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">PROGRAMS</a></li>
-                    <li><a href="">OVERVIEW</a></li>
-                    <li><a href="">SYLLABUS</a></li>
+                    <li><a href="/index.html#footers">ABOUT</a></li>
+                    <li><a href="javapage.html">PROGRAMS</a></li>
+                    <li><a href="java.html">OVERVIEW</a></li>
+                    <li><a href="javaSyllabus.html">SYLLABUS</a></li>
                 </ul>
             </div>
             <i class="fa ri-menu-line"></i>
