--- a/java.html
+++ b/java.html
@@ -19,17 +19,17 @@
         <nav>
             <div class="nav_image">
                 <a href="index.html"><img src="images/logo1.png" alt="wait"></a>
-                <h3>LOGO</h3>
+                <h3>CodeIgniter</h3>
             </div>
             <div class="nav-links">
                 <!-- <i class="ri-close-circle-fill"></i> -->
                 <ul>
                     <li><a href=""><i class="ra ri-close-circle-fill"></i></a></li>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">PROGRAMS</a></li>
-                    <li><a href="">OVERVIEW</a></li>
-                    <li><a href="">SYLLABUS</a></li>
+                    <li><a href="/index.html#footers">ABOUT</a></li>
+                    <li><a href="javapage.html">PROGRAMS</a></li>
+                    <li><a href="java.html">OVERVIEW</a></li>
+                    <li><a href="javaSyllabus.html">SYLLABUS</a></li>
                 </ul>
             </div>
             <i class="fa ri-menu-line"></i>
