--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href=""><i class="ra ri-close-circle-fill"></i></a></li>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#footers">ABOUT</a></li>
-                    <li><a href="phppage.html">PROGRAMS</a></li>
+                    <li><a href="javapage.html">PROGRAMS</a></li>
                     <li><a href="#footers">OVERVIEW</a></li>
                     <li><a href="phpSyllabus.html">SYLLABUS</a></li>
                 </ul>
@@ -178,7 +178,8 @@
             <h4>follow us</h4>
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="https://github.com/prince4panwar"><i class="fab fa-github"></i></a>
+              <a href="https://twitter.com/PrinceP08951882"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
               <a href="https://www.linkedin.com/in/princepanwar420/"><i class="fab fa-linkedin-in"></i></a>
             </div>
