--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             
         </div>
     </section>
-    <section>
+    <section id="contain">
         <div class="boxes">
             <div class="container">
                 <div class="box">
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="container" id="contain">
+            <div class="container">
                 <div class="box">
                         <div class="box_head" id="myClickableBoxJava">HTML</div>
                         <div class="upper">
