--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#footers">ABOUT</a></li>
                     <li><a href="javapage.html">PROGRAMS</a></li>
                     <li><a href="#footers">OVERVIEW</a></li>
-                    <li><a href="phpSyllabus.html">SYLLABUS</a></li>
+                    <li><a href="javaSyllabus.html">SYLLABUS</a></li>
                 </ul>
             </div>
             <i class="fa ri-menu-line"></i>
